force-app/main/default/objects/Account/fields/Especifique__c.field-meta.xml
<CustomField>
    <fullName>Especifique__c</fullName>
    <label>Especifique País</label>
    <length>40</length>
    <type>Text</type>
</CustomField>