force-app/main/default/objects/Account/fields/Especifique_Type__c.field-meta.xml
<CustomField>
    <fullName>Especifique_Type__c</fullName>
    <label>Especifíque</label>
    <length>100</length>
    <type>Text</type>
</CustomField>