force-app/main/default/objects/Account/fields/Mat_Condiciones_Comerciales__c.field-meta.xml
<CustomField>
    <fullName>Mat_Condiciones_Comerciales__c</fullName>
    <label>Condiciones comerciales</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>