force-app/main/default/objects/Account/fields/Mat_Estado__c.field-meta.xml
<CustomField>
    <fullName>Mat_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inscritos como proveedores</fullName>
            </value>
            <value>
                <fullName>No inscritos como proveedores</fullName>
            </value>
            <value>
                <fullName>Ganado</fullName>
                <isActive>false</isActive>
                <label>Ganado</label>
            </value>
            <value>
                <fullName>Perdido</fullName>
                <isActive>false</isActive>
                <label>Perdido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>