force-app/main/default/objects/Account/fields/Mat_Informacion_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Mat_Informacion_Fiscal__c</fullName>
    <label>Información fiscal</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>