force-app/main/default/objects/Account/fields/Mat_NIT__c.field-meta.xml
<CustomField>
    <fullName>Mat_NIT__c</fullName>
    <label>NIT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>