force-app/main/default/objects/Account/fields/Mat_Nombre_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Mat_Nombre_Comercial__c</fullName>
    <label>Nombre Comercial</label>
    <length>40</length>
    <type>Text</type>
</CustomField>