force-app/main/default/objects/Account/fields/Mat_Nombre_Legal__c.field-meta.xml
<CustomField>
    <fullName>Mat_Nombre_Legal__c</fullName>
    <label>Nombre legal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>