force-app/main/default/objects/Account/fields/Mat_Responsable_comercial__c.field-meta.xml
<CustomField>
    <fullName>Mat_Responsable_comercial__c</fullName>
    <label>Responsable comercial</label>
    <length>40</length>
    <type>Text</type>
</CustomField>