force-app/main/default/objects/Account/fields/Mat_Unidad_De_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Mat_Unidad_De_Negocio__c</fullName>
    <label>Unidad de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>