force-app/main/default/objects/Account/fields/Mat_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Mat_Vendedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>