force-app/main/default/objects/Account/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mat_Pais</valueSetName>
    </valueSet>
</CustomField>