force-app/main/default/objects/Account/recordTypes/Agencias.recordType-meta.xml
<RecordType>
    <fullName>Agencias</fullName>
    <active>true</active>
    <description>Cuentas que representan agencias cliente de Match</description>
    <label>Agencia</label>
</RecordType>