force-app/main/default/objects/Account/listViews/Mat_Marcas.listView-meta.xml
<ListView>
    <fullName>Mat_Marcas</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012WI000005tYUP</value>
    </filters>
    <label>Marcas</label>
</ListView>